welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.error
Program:4: error: not found: value color
} while (getCouleurSol() == color.yellow) 
                            ^